Added current song widget

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,3 +3,9 @@
 <ul>
     <li>@Html.ActionLink("MediaPlayer API", "Index", "MediaPlayer")</li>
 </ul>
+
+<h1>OBSTools Widgets</h1>
+
+<ul>
+    <li>@Html.ActionLink("Current Song", "CurrentSong", "Widgets")</li>
+</ul>
