--- a/Views/Widgets/CurrentSong.cshtml
+++ b/Views/Widgets/CurrentSong.cshtml
@@ -3,20 +3,29 @@
 <div id="song">OBSTools Current Song Widget</div>
 
 <script>
-    const song = document.getElementById("song");
-    fetch("/MediaPlayer/CurrentSong")
+    const song = document.getElementById("song")
+    var currentSong = ""
+
+    function updateCurrentSong() {
+         fetch("/MediaPlayer/CurrentSong")
         .then((response) => {
             if (!response.ok) {
-                throw new Error(`HTTP error! Status: ${response.status}`);
+                throw new Error(`HTTP error! Status: ${response.status}`)
             }
 
-            return response.json();
+            return response.json()
         })
-        .then((json) => {
-            console.log(json);
-            song.innerHTML = json;
+        .then((data) => {
+            if (currentSong !== data) {
+                currentSong = data
+                console.log(data);
+                song.innerHTML = data
+            }
         })
         .catch((err) => {
-            song.innerHTML = "";
+            song.innerHTML = ""
         })
+    }
+
+    setInterval(updateCurrentSong, 1000)
 </script>
